feat: Implement product and store status synchronization mechanism
- Removed ProductCacheEvictionServiceImpl as it is no longer needed.
- Updated ProductInternalServiceImpl to utilize ProductStoreStatusSyncSupport for managing product availability based on store status.
- Added CustomizationOptionStoreStatusSyncSupport to handle customization option statuses.
- Introduced ProductStoreStatusSyncSupport for managing product statuses across stores.
- Created product-status-sync-design.md to document the synchronization strategy and data model.
- Modified SQL schema to include versioning for product and store statuses, ensuring consistency and integrity.
- Renamed and updated store customization item and option tables to reflect their status management role.
- Deleted obsolete store_product_rel table to streamline the database structure.